implement application ports connecting with adapters
